[package]
name = "grin_wallet_config"
version = "2.0.1-beta.3"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Configuration for grin wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
chrono = "0.4.5"
dns-lookup = "1.0"
log = "0.4"
rand = "0.5"
regex = "1"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

grin_wallet_util = { path = "../util", version = "2.0.1-beta.3" }

[dev-dependencies]
pretty_assertions = "0.5.1"
