[package]
name = "grin_wallet_controller"
version = "2.0.1-beta.4"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>", "Gotts Developers <gotts.tech@lists.launchpad.net>"]
description = "Controllers for grin wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/gottstech/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
colored = "1.6"
dirs = "1"
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
hyper = "0.12"
rand = "0.5"
rustc-serialize = "0.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
prettytable-rs = "0.7"
ring = "0.13"
term = "0.5"
tokio = "= 0.1.11"
tokio-core = "0.1"
tokio-retry = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
url = "1.7.0"
chrono = { version = "0.4.4", features = ["serde"] }
easy-jsonrpc = "0.5.1"
lazy_static = "1"

grin_wallet_util = { path = "../util", version = "2.0.1-beta.4" }

grin_wallet_api = { path = "../api", version = "2.0.1-beta.4" }
grin_wallet_impls = { path = "../impls", version = "2.0.1-beta.4" }
grin_wallet_libwallet = { path = "../libwallet", version = "2.0.1-beta.4" }
grin_wallet_config = { path = "../config", version = "2.0.1-beta.4" }
grin_wallet_relay = { path = "../grinrelay", version = "2.0.1-beta.4" }

[features]
ssl = ["grin_wallet_relay/ssl"]