[package]
name = "grin_wallet_relay"
version = "2.0.1-beta.3"
authors = ["Gary Yu <gairy.yu@gmail.com>"]
description = "Grin Relay API"
license = "Apache-2.0"
repository = "https://github.com/gottstech/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
exclude = ["**/*.grin", "**/*.grin2"]
edition = "2018"

[dependencies]
colored = "1.6"
chrono = "0.4.5"
digest = "0.7"
dns-lookup = "1.0"
failure = "0.1"
failure_derive = "0.1"
hex = "0.3"
hmac = "0.6"
log = "0.4"
parking_lot = {version = "0.6"}
rand = "0.5"
regex = "1"
ring = "0.13"
ripemd160 = "0.7"
rustc-serialize = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.7"
ws = { version="0.8" }

grin_secp256k1zkp = { version = "0.7.7", features = ["bullet-proof-sizing"]}
grin_wallet_libwallet = { path = "../libwallet", version = "2.0.1-beta.3" }
grin_wallet_util = { path = "../util", version = "2.0.1-beta.3" }

[dependencies.openssl]
optional = true
version = "0.10"

[dependencies.url]
optional = true
version = "1.7"

[features]
ssl = ["openssl", "url", "ws/ssl"]



