[package]
name = "grin_integration"
version = "1.1.0"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1"
http = "0.1"
itertools = "0.7"
rand = "0.5"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.4"
tokio =  "0.1.11"
blake2-rfc = "0.2"
bufstream = "0.1"

grin_wallet_api = { path = "../api", version = "1.1.0-beta.2" }
grin_wallet_libwallet = { path = "../libwallet", version = "1.1.0-beta.2" }
grin_wallet_config = { path = "../config", version = "1.1.0-beta.2" }

grin_core = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_keychain = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_chain = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_util = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_api = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_store = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_p2p = { git = "https://github.com/mimblewimble/grin", branch = "master" }
grin_servers = { git = "https://github.com/mimblewimble/grin", branch = "master" }
