[package]
name = "grin_wallet_util"
version = "2.0.1-beta.2"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
lazy_static = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
grin_core = "2.0.0"
grin_keychain = "2.0.0"
grin_chain = "2.0.0"
grin_util = "2.0.0"
grin_api = "2.0.0"
grin_store = "2.0.0"

# For beta release
#grin_core = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0-beta.1" }
#grin_keychain = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0-beta.1" }
#grin_chain = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0-beta.1" }
#grin_util = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0-beta.1" }
#grin_api = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0-beta.1" }
#grin_store = { git = "https://github.com/mimblewimble/grin", tag = "v2.0.0-beta.1" }

# For bleeding edge
#grin_core = { git = "https://github.com/mimblewimble/grin", branch = "milestone/2.0.0" }
#grin_keychain = { git = "https://github.com/mimblewimble/grin", branch = "milestone/2.0.0" }
#grin_chain = { git = "https://github.com/mimblewimble/grin", branch = "milestone/2.0.0" }
#grin_util = { git = "https://github.com/mimblewimble/grin", branch = "milestone/2.0.0" }
#grin_api = { git = "https://github.com/mimblewimble/grin", branch = "milestone/2.0.0" }
#grin_store = { git = "https://github.com/mimblewimble/grin", branch = "milestone/2.0.0" }

# For local testing
#grin_core = { path = "../../../mimblewimble/grin/core"}
#grin_keychain = { path = "../../../mimblewimble/grin/keychain"}
#grin_chain = { path = "../../../mimblewimble/grin/chain"}
#grin_util = { path = "../../../mimblewimble/grin/util"}
#grin_api = { path = "../../../mimblewimble/grin/api"}
#grin_store = { path = "../../../mimblewimble/grin/store"}

[dev-dependencies]
pretty_assertions = "0.5.1"
