[package]
name = "grin_wallet_util"
version = "2.0.1-beta.3"
authors = ["Grin Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export grin crates"
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/grin-wallet"
keywords = [ "crypto", "grin", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
backtrace = "0.3"
lazy_static = "1"
log4rs = { version = "0.8.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
log = "0.4"
rand = "0.5"
serde = "1"
serde_derive = "1"
toml = "0.4"
dirs = "1.0.3"

# For Release
grin_core = { git = "https://github.com/gottstech/grin", tag = "v2.0.4" }
grin_keychain = { git = "https://github.com/gottstech/grin", tag = "v2.0.4" }
grin_chain = { git = "https://github.com/gottstech/grin", tag = "v2.0.4" }
grin_util = { git = "https://github.com/gottstech/grin", tag = "v2.0.4" }
grin_api = { git = "https://github.com/gottstech/grin", tag = "v2.0.4" }
grin_store = { git = "https://github.com/gottstech/grin", tag = "v2.0.4" }

# For beta release
#grin_core = { git = "https://github.com/gottstech/grin", tag = "v2.0.4-beta.1" }
#grin_keychain = { git = "https://github.com/gottstech/grin", tag = "v2.0.4-beta.1" }
#grin_chain = { git = "https://github.com/gottstech/grin", tag = "v2.0.4-beta.1" }
#grin_util = { git = "https://github.com/gottstech/grin", tag = "v2.0.4-beta.1" }
#grin_api = { git = "https://github.com/gottstech/grin", tag = "v2.0.4-beta.1" }
#grin_store = { git = "https://github.com/gottstech/grin", tag = "v2.0.4-beta.1" }

# For bleeding edge
#grin_core = { git = "https://github.com/gottstech/grin", branch = "milestone/2.0.0" }
#grin_keychain = { git = "https://github.com/gottstech/grin", branch = "milestone/2.0.0" }
#grin_chain = { git = "https://github.com/gottstech/grin", branch = "milestone/2.0.0" }
#grin_util = { git = "https://github.com/gottstech/grin", branch = "milestone/2.0.0" }
#grin_api = { git = "https://github.com/gottstech/grin", branch = "milestone/2.0.0" }
#grin_store = { git = "https://github.com/gottstech/grin", branch = "milestone/2.0.0" }

# For local testing
#grin_core = { path = "../../grin/core"}
#grin_keychain = { path = "../../grin/keychain"}
#grin_chain = { path = "../../grin/chain"}
#grin_util = { path = "../../grin/util"}
#grin_api = { path = "../../grin/api"}
#grin_store = { path = "../../grin/store"}

[dev-dependencies]
pretty_assertions = "0.5.1"
